disable scrollbar & fix scrollbar bug

--- a/src/assets/styles/scrollbar.scss
+++ b/src/assets/styles/scrollbar.scss
@@ -1,16 +1,16 @@
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  background-color: #F5F5F5;
-}
+// body::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+//   border-radius: 10px;
+//   background-color: #F5F5F5;
+// }
 
-body::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5;
-}
+// body::-webkit-scrollbar {
+//   width: 12px;
+//   background-color: #F5F5F5;
+// }
 
-body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-  background-color: ccc;
-}
+// body::-webkit-scrollbar-thumb {
+//   border-radius: 10px;
+//   box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+//   background-color: ccc;
+// }
